Update libs + GitHub Pages deployment

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <a href="#" id="popup-closer" class="ol-popup-closer"></a>
     <div id="popup-content"></div>
   </div>
-  <script src="main.js"></script>
+  <script type="module" src="main.js"></script>
 </body>
 
 </html>
